--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react"
   ],
   "scripts": {
+    "build": "babel --out-dir lib src",
     "lint": "eslint ./lib -f table || true",
     "test-unit": "mocha --compilers js:babel-core/register 'tests/**/*Test.js'",
     "test": "npm run lint && npm run test-unit"
@@ -29,6 +30,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
